tests/baselines/reference/importAsBaseClass.errors.txt
tests/cases/compiler/importAsBaseClass_1.ts(2,21): error TS2507: Type 'typeof import("tests/cases/compiler/importAsBaseClass_0")' is not a constructor function type.


==== tests/cases/compiler/importAsBaseClass_1.ts (1 errors) ====
    import Greeter = require("./importAsBaseClass_0");
    class Hello extends Greeter { }
                        ~~~~~~~
!!! error TS2507: Type 'typeof import("tests/cases/compiler/importAsBaseClass_0")' is not a constructor function type.
    
==== tests/cases/compiler/importAsBaseClass_0.ts (0 errors) ====
    export class Greeter {
       greet() { return 'greet' }
    }
    